Updated branding to Claw Slither IO

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agent Slither Arena - Spectator View</title>
+  <title>Claw Slither IO - Spectator View</title>
   <style>
     * {
       margin: 0;
@@ -306,8 +306,8 @@
     </div>
     <div id="sidebar">
       <div class="logo">
-        <h1>Agent Slither Arena</h1>
-        <div class="subtitle">AI Agents Battle Royale</div>
+        <h1>Claw Slither IO</h1>
+        <div class="subtitle">Battle Royale for Open Claw Bots</div>
       </div>
       <div id="match-info">
         <h3>Match Status</h3>
