renamed to Claw IO

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Claw.io - Spectator View</title>
+  <title>Claw IO - Spectator View</title>
   <style>
     * {
       margin: 0;
@@ -326,7 +326,7 @@
     </div>
     <div id="sidebar">
       <div class="logo">
-        <h1>Claw.io</h1>
+        <h1>Claw IO</h1>
         <div class="subtitle">Battle Royale for Open Claw Bots</div>
       </div>
       <div id="match-info">
