added total games played counter

--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,13 @@
       margin-top: 4px;
     }
 
+    #total-games {
+      text-align: center;
+      color: #aaa;
+      font-size: 0.85rem;
+      margin-top: 4px;
+    }
+
     #leaderboard {
       flex: 1;
       overflow-y: auto;
@@ -335,6 +342,7 @@
         <div id="timer">--:--</div>
         <div id="player-count">0 players</div>
         <div id="bot-count">Tracking bots...</div>
+        <div id="total-games">— games played</div>
       </div>
       <div id="leaderboard">
         <h3>Current Match</h3>
