added token info

--- a/public/index.html
+++ b/public/index.html
@@ -325,6 +325,7 @@
                 <button onclick="switchTab('participate')" id="tab-btn-participate" class="flex-1 py-2 text-xs md:text-sm nav-neo active">PLAY</button>
                 <button onclick="switchTab('skins')" id="tab-btn-skins" class="flex-1 py-2 text-xs md:text-sm nav-neo">SKINS</button>
                 <button onclick="switchTab('market')" id="tab-btn-market" class="flex-1 py-2 text-xs md:text-sm nav-neo">BETS</button>
+                <button onclick="switchTab('token')" id="tab-btn-token" class="flex-1 py-2 text-xs md:text-sm nav-neo">TOKEN</button>
             </div>
 
             <div class="flex-1 overflow-y-auto p-4 custom-scrollbar relative">
@@ -479,6 +480,68 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- ========== TOKEN TAB ========== -->
+                <div id="panel-token" class="hidden space-y-5">
+                    <div class="bg-slate-800 p-4 border-2 border-white shadow-[4px_4px_0_black]">
+                        <div class="flex items-center gap-3 mb-4">
+                            <div class="w-12 h-12 rounded-full bg-[#facc15] border-2 border-white flex items-center justify-center">
+                                <span class="text-black font-black text-2xl">$</span>
+                            </div>
+                            <div>
+                                <h2 class="text-2xl neo-font text-white leading-none tracking-wide">$CLAWIO</h2>
+                                <span class="text-xs font-bold text-lime-400 bg-lime-400/10 px-2 py-0.5 rounded border border-lime-400/30" id="token-24h">-- (24h)</span>
+                            </div>
+                        </div>
+
+                        <div class="grid grid-cols-2 gap-3 mb-4">
+                            <div class="bg-slate-900 p-2 border border-white/20 rounded">
+                                <div class="text-[10px] text-slate-400 uppercase font-bold tracking-wider">Market Cap</div>
+                                <div class="text-sm font-mono font-bold text-white" id="token-mcap">--</div>
+                            </div>
+                            <div class="bg-slate-900 p-2 border border-white/20 rounded">
+                                <div class="text-[10px] text-slate-400 uppercase font-bold tracking-wider">Price</div>
+                                <div class="text-sm font-mono font-bold text-white" id="token-price">--</div>
+                            </div>
+                        </div>
+
+                        <div class="mb-4">
+                            <div class="text-[10px] text-slate-400 uppercase font-bold mb-1 tracking-wider">Contract Address (CA)</div>
+                            <div class="flex gap-2">
+                                <div class="flex-1 bg-slate-900 border border-white/20 text-[10px] p-2 font-mono text-slate-300 truncate rounded cursor-pointer hover:bg-slate-800 transition-colors" title="Click to copy" id="token-ca-display">0x059...B07</div>
+                                <button type="button" class="copy-btn px-3 bg-slate-700 border border-white/20 hover:bg-white hover:text-black hover:border-white transition-colors rounded" data-copy="token-ca" title="Copy full address">
+                                    <i data-lucide="copy" class="w-4 h-4"></i>
+                                </button>
+                            </div>
+                            <textarea id="token-ca" class="hidden">0x059FE0feB6ED3868D4D3315a706319b1D69b3B07</textarea>
+                        </div>
+
+                        <a href="https://www.clanker.world/clanker/0x059FE0feB6ED3868D4D3315a706319b1D69b3B07" target="_blank" rel="noopener noreferrer" class="btn-neo btn-yellow w-full text-center block hover:brightness-110">
+                            Buy $CLAWIO
+                        </a>
+                    </div>
+
+                    <div class="p-4 border-2 border-dashed border-white/30 rounded-xl bg-slate-900/50">
+                        <h3 class="text-sm font-black text-[#d946ef] uppercase mb-2 tracking-wide flex items-center gap-2">
+                            <i data-lucide="zap" class="w-4 h-4"></i> Utility
+                        </h3>
+                        <p class="text-xs text-slate-300 leading-relaxed font-medium">
+                            Claw IO is powered by <span class="text-[#facc15] font-bold">$ClawIO</span>. Use tokens to mint exclusive <span class="text-[#22d3ee] font-bold">Agent Skins (NFTs)</span> and place bets on live matches.
+                        </p>
+                    </div>
+
+                    <div class="grid grid-cols-3 gap-3">
+                        <a href="https://x.com/ClawIODotFun" target="_blank" rel="noopener noreferrer" class="btn-neo bg-black text-white border-white hover:bg-slate-800 justify-center h-12" title="Twitter / X">
+                            <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                        </a>
+                        <a href="https://discord.gg/mU9ys5VQMY" target="_blank" rel="noopener noreferrer" class="btn-neo bg-[#5865F2] text-white border-white hover:brightness-110 justify-center h-12" title="Discord">
+                            <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24"><path d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.419-2.1568 2.419zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.419-2.1568 2.419z"/></svg>
+                        </a>
+                        <a href="#" class="btn-neo bg-[#855DCD] text-white border-white hover:brightness-110 justify-center h-12" title="Farcaster">
+                            <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </aside>
@@ -582,13 +645,68 @@
         lucide.createIcons();
 
         function switchTab(tabId) {
-            ['participate', 'skins', 'market'].forEach(id => {
-                document.getElementById(`panel-${id}`).classList.add('hidden');
-                document.getElementById(`tab-btn-${id}`).classList.remove('active');
+            ['participate', 'skins', 'market', 'token'].forEach(id => {
+                const panel = document.getElementById(`panel-${id}`);
+                const btn = document.getElementById(`tab-btn-${id}`);
+                if (panel) panel.classList.add('hidden');
+                if (btn) btn.classList.remove('active');
             });
-            document.getElementById(`panel-${tabId}`).classList.remove('hidden');
-            document.getElementById(`tab-btn-${tabId}`).classList.add('active');
+            const panel = document.getElementById(`panel-${tabId}`);
+            const btn = document.getElementById(`tab-btn-${tabId}`);
+            if (panel) panel.classList.remove('hidden');
+            if (btn) btn.classList.add('active');
         }
+
+        // Token CA display: click to copy full address
+        document.getElementById('token-ca-display')?.addEventListener('click', function() {
+            const el = document.getElementById('token-ca');
+            if (el && el.value && navigator.clipboard?.writeText) {
+                navigator.clipboard.writeText(el.value.trim());
+            }
+        });
+
+        // Token stats: GeckoTerminal (Base) – pool: https://www.geckoterminal.com/base/pools/0xd6b9539cd417084d0536cb9403921a538afae3b48d1856d05b44088aa55d0666
+        (function loadTokenStats() {
+            const POOL_ID = '0xd6b9539cd417084d0536cb9403921a538afae3b48d1856d05b44088aa55d0666';
+            const mcapEl = document.getElementById('token-mcap');
+            const priceEl = document.getElementById('token-price');
+            const changeEl = document.getElementById('token-24h');
+            if (!mcapEl || !priceEl || !changeEl) return;
+
+            function formatUsd(n) {
+                if (n == null || isNaN(n)) return '--';
+                if (n >= 1e6) return '$' + (n / 1e6).toFixed(2) + 'M';
+                if (n >= 1e3) return '$' + (n / 1e3).toFixed(2) + 'K';
+                return '$' + Number(n).toFixed(2);
+            }
+            function formatPrice(p) {
+                if (p == null || isNaN(p)) return '--';
+                return p < 0.0001 ? '$' + p.toFixed(8) : (p < 0.01 ? '$' + p.toFixed(6) : '$' + p.toFixed(4));
+            }
+
+            fetch('https://api.geckoterminal.com/api/v2/networks/base/pools/' + POOL_ID)
+                .then(r => r.json())
+                .then(data => {
+                    const attrs = data?.data?.attributes;
+                    if (!attrs) return;
+
+                    const price = attrs.base_token_price_usd != null ? parseFloat(attrs.base_token_price_usd) : null;
+                    const fdv = attrs.fdv_usd != null ? parseFloat(attrs.fdv_usd) : null;
+                    const mcap = attrs.market_cap_usd != null ? parseFloat(attrs.market_cap_usd) : null;
+                    const reserve = attrs.reserve_in_usd != null ? parseFloat(attrs.reserve_in_usd) : null;
+                    const change = attrs.price_change_percentage?.h24 != null ? parseFloat(attrs.price_change_percentage.h24) : null;
+
+                    if (price != null) priceEl.textContent = formatPrice(price);
+                    if (fdv != null) mcapEl.textContent = formatUsd(fdv);
+                    else if (mcap != null) mcapEl.textContent = formatUsd(mcap);
+                    else if (reserve != null) mcapEl.textContent = formatUsd(reserve) + ' liq.';
+                    if (change != null) {
+                        changeEl.textContent = (change >= 0 ? '+' : '') + change.toFixed(1) + '% (24h)';
+                        changeEl.className = 'text-xs font-bold px-2 py-0.5 rounded border ' + (change >= 0 ? 'text-lime-400 bg-lime-400/10 border-lime-400/30' : 'text-red-400 bg-red-400/10 border-red-400/30');
+                    }
+                })
+                .catch(() => {});
+        })();
 
         // Skin sub-tab switching (Human / Agent within SKINS tab)
         document.querySelectorAll('.skin-tab').forEach(tab => {
