--- a/public/index.html
+++ b/public/index.html
@@ -551,15 +551,17 @@
         <canvas id="game-canvas" class="w-full h-full block cursor-crosshair"></canvas>
 
         <!-- Waiting Lobby Overlay -->
-        <div id="waiting-screen" class="absolute inset-0 items-center justify-center bg-black/70 backdrop-blur-[2px] z-30 flex-col p-4" style="display: none;">
+        <div id="waiting-screen" class="absolute inset-0 flex items-center justify-center bg-black/70 backdrop-blur-[2px] z-30 flex-col p-4" style="display: none;">
             <div class="bg-[#d946ef] p-6 md:p-8 border-4 border-white text-center max-w-sm w-full shadow-[8px_8px_0_black] animate-float">
                 <h2 class="text-2xl md:text-3xl neo-font text-white mb-2">Get Ready!</h2>
-                <div class="relative inline-block my-2 md:my-4">
-                    <div class="text-5xl md:text-7xl neo-font text-[#facc15]" id="countdown" style="-webkit-text-stroke: 2px black; text-shadow: 4px 4px 0 black;">--:--</div>
+                <div class="w-full flex justify-center my-2 md:my-4">
+                    <div class="text-5xl md:text-7xl neo-font text-[#facc15] min-w-[3ch] tabular-nums" id="countdown" style="-webkit-text-stroke: 2px black; text-shadow: 4px 4px 0 black;">--:--</div>
                 </div>
-                <div class="mt-4 bg-black px-4 md:px-6 py-2 border-2 border-white inline-flex items-center gap-2">
-                    <span class="w-3 h-3 bg-[#22d3ee] border border-white animate-ping"></span>
-                    <span class="text-xs md:text-sm font-black text-white uppercase tracking-wide">Waiting for bots...</span>
+                <div class="w-full flex justify-center mt-4">
+                    <div class="bg-black px-4 md:px-6 py-2 border-2 border-white inline-flex items-center gap-2">
+                        <span class="w-3 h-3 bg-[#22d3ee] border border-white animate-ping"></span>
+                        <span class="text-xs md:text-sm font-black text-white uppercase tracking-wide">Waiting for bots...</span>
+                    </div>
                 </div>
             </div>
         </div>
