added mclawio balance

--- a/public/index.html
+++ b/public/index.html
@@ -500,7 +500,7 @@
                                 </div>
                                 <div class="text-right">
                                     <span class="text-sm font-black text-[#facc15]" id="betting-wallet-balance">0</span>
-                                    <span class="text-xs text-slate-400 font-bold ml-1">MON</span>
+                                    <span class="text-xs text-slate-400 font-bold ml-1" id="betting-wallet-symbol">MON</span>
                                 </div>
                             </div>
                         </div>
